--- a/001_jsx-compiler/index.html
+++ b/001_jsx-compiler/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>JSX to JS</title>
+    <link href="./css/normalize.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="./css/main.css" media="all" rel="stylesheet" type="text/css" />
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
 </head>
@@ -18,3 +20,4 @@
 </script>
 </body>
 </html>
+
